# langchain

./: README.md  models.xlsx  pyproject.toml
ChatModels/: chatpromptemplate.py  hugginFaceWithPydanticParser.py  huggingFace.py  huggingFaceWithJsonParser.py  huggingFaceWithParser.py  huggingFaceWithPromptTemplate.py  openAICHatModel.py  openAIChainWithPromptTemplate.py  openAIChatModelWithMessage.py  parallalChains.py  structureOutputParser.py
LLMs/: openapi_llm.py
embeded-models/: gemini-embeded-model.py
